--- a/movies.html
+++ b/movies.html
@@ -39,8 +39,13 @@
         - [ ] Test dit uit door de development-tools van de browser te openen en het scherm te resizen
 
 -->
+<head>
+    <title>movies</title>
+</head>
 
-<table style="">
+<table style="background-color: yellow">
+    <select style="background-color: purple" id=""></select>
+    
 <tr>
 	<th>id</th>
 	<th>name</th>
