de achtergrondkleur van de titels zijn blauw

--- a/movies.html
+++ b/movies.html
@@ -43,10 +43,10 @@
     <title>movies</title>
 </head>
 
-<table style="background-color: yellow">
-    <select style="background-color: purple" id=""></select>
+<table style="background-color: yellow; color: purple;white-space: nowrap;width: 100%">
     
-<tr>
+    
+<tr style="background-color: blue">
 	<th>id</th>
 	<th>name</th>
 	<th>directory</th>
